@@ -2,6 +2,7 @@ package webui
 
 import (
 	"fmt"
+	"time"
 	"strconv"
 	"net/http"
 	"io/ioutil"
@@ -35,6 +36,15 @@ func p_cfg(w http.ResponseWriter, r *http.Request) {
 				common.SaveConfig()
 			}
 			http.Redirect(w, r, "/", http.StatusFound)
+			return
+		}
+
+		if len(r.Form["friends_file"]) > 0 {
+			ioutil.WriteFile("friends.txt", []byte(r.Form["friends_file"][0]), 0600)
+			network.Mutex_net.Lock()
+			network.NextConnectFriends = time.Now()
+			network.Mutex_net.Unlock()
+			http.Redirect(w, r, "/net", http.StatusFound)
 			return
 		}
 
